# python-template

./: action.yaml  flake.nix  pyproject.toml
.github/: README.md  renovate.json
.github/workflows/: vulnerable.yaml
